--- a/CasaNova/imoveis/templates/base.html
+++ b/CasaNova/imoveis/templates/base.html
@@ -17,12 +17,23 @@
             <nav>
 
     {% if user.is_authenticated %}
-        <a href="{% url 'criar_imovel' %}">Novo Imóvel</a>
-        <a href="{% url 'criar_corretor' %}">Novo Corretor</a>
+        
         <a href="{% url 'lista_imoveis' %}">Imóveis</a>
         <a href="{% url 'lista_corretores' %}">Corretores</a>
+        <a href="{% url 'criar_imovel' %}">Novo Imóvel</a>
+        <a href="{% url 'criar_corretor' %}">Novo Corretor</a>
         
-        <a href="{% url 'logout' %}">Sair ({{ user.username }})</a>
+        
+        {% if user.is_authenticated %}
+    <form method="post" action="{% url 'logout' %}" class="form-logout">
+        {% csrf_token %}
+        <button type="submit" class="logout-btn">
+            Sair ({{ user.username }})
+        </button>
+    </form>
+
+{% else %}
+    {% endif %}
     {% else %}
         <a href="{% url 'login' %}">Entrar</a>
         <a href="{% url 'register' %}">Registrar</a>
