--- a/CasaNova/imoveis/templates/corretor_confirm_delete.html
+++ b/CasaNova/imoveis/templates/corretor_confirm_delete.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 {% block conteudo %}
-    <h2>Eliminar Corretor</h2>
+    <h2>Expulsão de Corretor</h2>
     
-    <p>Tem certeza de que deseja eliminar "<strong>{{ corretor.nome }}</strong>"?</p>
+    <p>Tem certeza de que deseja excluir "<strong>{{ corretor.nome }}</strong>"?</p>
     
     <form method="post">
         {% csrf_token %}
-        <button type="submit" class="btn-delete">Sim, Eliminar</button>
+        <button type="submit" class="btn-delete">Sim, Mandar pro lixo</button>
         <a href="{% url 'detalhe_corretor' corretor.id %}">Cancelar</a>
     </form>
 {% endblock %}
